[gd_scene load_steps=31 format=2]

[ext_resource path="res://Testing resources/Biden_sit.png" type="Texture" id=1]
[ext_resource path="res://Testing resources/bidenanime.png" type="Texture" id=2]
[ext_resource path="res://Biden.gd" type="Script" id=3]
[ext_resource path="res://Testing resources/flag (1).png" type="Texture" id=4]
[ext_resource path="res://biden_with_shotgun.png" type="Texture" id=5]
[ext_resource path="res://Shotgun.gd" type="Script" id=6]
[ext_resource path="res://fart-with-reverb.ogg" type="AudioStream" id=7]
[ext_resource path="res://shotgun.png" type="Texture" id=8]
[ext_resource path="res://Testing resources/Winchester12-RA_The_Sun_God-1722751268.ogg" type="AudioStream" id=9]
[ext_resource path="res://shoot.tres" type="Animation" id=10]
[ext_resource path="res://holster.png" type="Texture" id=11]
[ext_resource path="res://Daco_785566 (2).png" type="Texture" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.7381
height = 28.5342

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Biden:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "charged"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Biden_Charged:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "holster"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Holster:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shotgun"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Shotgun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 512, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -150, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=6]
length = 1.1
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.253302, -0.372855, 3.28609, -0.334346, -0.813823, 0.13651, -0.156504, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fart:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false ]
}

[sub_resource type="Animation" id=7]
length = 4.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 512, -0.25, 0, 0.25, 0, 712, -0.25, 0, 0.25, 0, 812, -0.25, 0, 0.25, 0, 712, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0, 312, -0.25, 0, 0.25, 0, 212, -0.25, 0, 0.25, 0, 312, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 300, -0.25, 0, 0.25, 0, 200, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0, 400, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0, 200, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0, 400, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 )
}

[sub_resource type="Animation" id=8]
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 512, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0, 712, -0.25, 0, 0.25, 0, 546.257, -0.25, 0, 0.25, 0, 312, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 300, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0, 500, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 )
}

[sub_resource type="Animation" id=9]
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 512, -0.25, 0, 0.25, 0, 932, -0.25, 0, 0.25, 0, 92, -0.25, 0, 0.25, 0, 932, -0.25, 0, 0.25, 0, 92, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0, 512, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 300, -0.25, 0, 0.25, 0, 255, -0.25, 0, 0.25, 0, 210, -0.25, 0, 0.25, 0, 165, -0.25, 0, 0.25, 0, 120, -0.25, 0, 0.25, 0, 40, -0.25, 0, 0.25, 0, 300, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5 )
}

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Lazer texture:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.18438, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Lazer texture:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.775, -0.25, 0, 0.25, 0, 0.775, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Lazer texture:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Lazer texture:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 86.871, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Lazer texture:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.486177, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Lazer texture:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.0429111, -0.25, 0, 0.25, 0, 1.18438, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Lazer texture:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.775, -0.25, 0, 0.25, 0, 0.775, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lazer texture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.499977 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lazer texture:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=12]
resource_name = "shoot_reversed"
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Position2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -11.368, -0.25, 0, 0.25, 0, -6.45, -0.25, 0, 0.25, 0, -11.845, -0.25, 0, 0.25, 0, -2.491, -0.25, 0, 0.25, 0, 11.368, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.75, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Position2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 6.539, -0.25, 0, 0.25, 0, 7.653, -0.25, 0, 0.25, 0, 7.653, -0.25, 0, 0.25, 0, 8.989, -0.25, 0, 0.25, 0, 6.539, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.75, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D/Fire:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=18]
resource_name = "Explode"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../EXPLODE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 22, 25, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../EXPLODE:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.52588e-05, -2.67029e-05 ), Vector2( 1.52588e-05, -26.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Biden:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.55, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=13]
length = 0.2
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("../Lazer texture:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.0909028, 7.68056, 1, -0.25, 0, 0.25, 0, 2.3569, -0.25, 0, 0.056271, 8.90197, 1, -0.25, 0, 0, 5.75154 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../Lazer texture:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.717647, -0.25, 0, 0.25, 0, 0.427451, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../Lazer texture:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.717647, -0.25, 0, 0.25, 0, 0.427451, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../Lazer texture:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../Lazer texture:self_modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.282353, -0.25, 0, 0.25, 0, 0.376471, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("../Lazer texture:self_modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.356863, -0.25, 0, 0.25, 0, 0.431373, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("../Lazer texture:self_modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.952941, -0.25, 0, 0.25, 0, 0.854902, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("../Lazer texture:self_modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 )
}

[sub_resource type="CapsuleShape2D" id=14]
radius = 10.25
height = 14.5

[sub_resource type="Animation" id=15]
resource_name = "cock"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=16]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 512, -150 )
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, -9.13443 )
collision_layer = 2

[node name="hitbox" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/charged = SubResource( 3 )
anims/holster = SubResource( 17 )
anims/shotgun = SubResource( 4 )

[node name="Movement" type="AnimationPlayer" parent="."]
anims/Enter = SubResource( 5 )
anims/enemy_spawn = SubResource( 6 )
anims/figure_8 = SubResource( 7 )
anims/loop = SubResource( 8 )
anims/zoom = SubResource( 9 )

[node name="Go" type="Timer" parent="."]

[node name="Lazer_animation" type="AnimationPlayer" parent="."]
"anims/Lazer end" = SubResource( 10 )
anims/lazerbegin = SubResource( 11 )
anims/shoot = ExtResource( 10 )
anims/shoot_reversed = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lazer_animation"]
anims/Explode = SubResource( 18 )
anims/lazerflash = SubResource( 13 )

[node name="Lazer_hitcast" type="RayCast2D" parent="."]
position = Vector2( -15, 94 )
scale = Vector2( 0.5, 0.5 )
cast_to = Vector2( 53, -20 )

[node name="Lazer" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="lazer collision shape" type="CollisionShape2D" parent="Lazer"]
position = Vector2( 0, 91.25 )
rotation = 1.5708
shape = SubResource( 14 )

[node name="Lazer texture" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 86.871 )
rotation = -1.5708
scale = Vector2( 0.1, 0.775 )
texture = ExtResource( 4 )
offset = Vector2( -40, 0 )

[node name="Biden" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.354098, 0.354098 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Biden_Charged" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.354, 0.354 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Lazertimer" type="Timer" parent="."]
wait_time = 3.0

[node name="hitscan" type="Timer" parent="."]
wait_time = 0.5

[node name="when_spawn" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Shotgun" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.354, 0.354 )
texture = ExtResource( 5 )
hframes = 3
vframes = 3
frame = 6

[node name="Holster" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -1.52588e-05 )
scale = Vector2( 0.354, 0.354 )
texture = ExtResource( 11 )
hframes = 3
vframes = 3
frame = 7

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( 11.368, 6.539 )
scale = Vector2( 0.354, 0.354 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Position2D"]
position = Vector2( 69.7586, 0 )
texture = ExtResource( 8 )
flip_h = true
hframes = 2
vframes = 5
frame = 6

[node name="Bullet_Point" type="Position2D" parent="Position2D/Sprite"]
position = Vector2( 85, -18.4718 )

[node name="Shotgun_Fire" type="AnimationPlayer" parent="Position2D"]
anims/cock = SubResource( 15 )
anims/idle = SubResource( 16 )

[node name="Fire" type="AudioStreamPlayer2D" parent="Position2D"]
stream = ExtResource( 9 )
pitch_scale = 0.9

[node name="Shotgun_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="side_timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Fart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="EXPLODE" type="Sprite" parent="."]
position = Vector2( 1.52588e-05, -26.5 )
scale = Vector2( 2.79448, 3.44823 )
texture = ExtResource( 12 )
offset = Vector2( 2.944, 0 )
hframes = 4
vframes = 7
frame = 27

[connection signal="timeout" from="Go" to="." method="_on_Go_timeout"]
[connection signal="area_entered" from="Lazer" to="." method="_on_Lazer_area_entered"]
[connection signal="body_entered" from="Lazer" to="." method="_on_Lazer_body_entered"]
[connection signal="timeout" from="Lazertimer" to="." method="_on_Lazertimer_timeout"]
[connection signal="timeout" from="hitscan" to="." method="_on_hitscan_timeout"]
[connection signal="timeout" from="when_spawn" to="." method="_on_when_spawn_timeout"]
[connection signal="timeout" from="Shotgun_Timer" to="." method="_on_Shotgun_Timer_timeout"]
[connection signal="timeout" from="side_timer" to="." method="_on_side_timer_timeout"]
